some overflow issues with css fixed

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,6 +74,7 @@ body {
 
 .custom {
   height: 100%;
+  min-height: 0;
 }
 
 .scroll {
